<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="header">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>

    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now...</string>
    <string name="endless">"Endless" Mode</string>
    <string name="setting_title">Settings</string>
    <string name="msg">Reboot to Apply changes</string>
    
    <string name="pref_playmode_key">pref_playmode_key</string>
    <string name="pref_playmode_title">Mode</string>
    <string name="pref_variety_key">pref_variety_key</string>
    <string name="pref_variety_titile">One turn to sucess</string>
    <string name="pref_costomize_title">Costomize Mode</string>
    <string name="pref_costomize_screen">Costomize Options</string>
    <string name="pref_costomize_key">pref_costomize_key</string>
    <string name="pref_costomize_editview_key">pref_costomize_editview_key</string>
    <string name="pref_costomize_editview_title">Enter Costom Mode</string>
    <string name="pref_costomize_editview_summary">Enter 10 charecter</string>

    <string name="setting_mode_histroy">Histroy</string>
    <string name="setting_mode_elements">Elements(20)</string>
    <string name="setting_mode_animal">Animal</string>
    <string name="setting_mode_educationalbackgroud">EducationalBackgroud</string>
    <string name="setting_mode_car">Car</string>
    <string name="setting_mode_limit">Limit 2147483648</string>
</resources>
